<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <CheckBoxPreference
        android:key="vibration_setting"
        android:title="@string/vibration"
        android:defaultValue="true"
        />
    <RingtonePreference
        android:key="ringtone_setting"
        android:title="@string/select_ringtone"
        android:showDefault="true"
        android:showSilent="true"
        android:defaultValue="content://settings/system/alarm_alert"
        android:ringtoneType="ringtone|alarm"
        />
    <ListPreference
        android:key="lang"
        android:title="@string/language"
        android:summary="@string/lang_end"
        android:entries="@array/entries_lang"
        android:entryValues="@array/entry_values_lang"
        android:dialogTitle="@string/lang_dialog"
        android:showDefault="true"
        android:defaultValue="ru"
        />
    <ListPreference
        android:key="radius"
        android:title="@string/wake_up_radius"
        android:summary="@string/wake_up_end"
        android:entries="@array/entries_radius"
        android:entryValues="@array/entry_values_radius"
        android:dialogTitle="@string/choose_radius"
        android:defaultValue="250"
        />
    <ListPreference
        android:key="map_type"
        android:title="@string/map_type_st"
        android:summary="@string/map_type_end"
        android:entries="@array/entries_map"
        android:entryValues="@array/entry_values_map"
        android:dialogTitle="@string/choose_map_type"
        android:defaultValue="MAP_TYPE_NORMAL"
        />
    <Preference
        android:title="MoreApps"
        android:key="google_play"
        android:summary="This will act like a button"
        android:icon="@drawable/ic_launcher"/>
</PreferenceScreen>